test: 로드맵 생성 방식 변경으로 인한 test code 수정